--- a/public/index.css
+++ b/public/index.css
@@ -104,3 +104,17 @@ h1,h2,h3 {
   width: 16px;
   height: 16px;
 }
+
+.my-1 {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.py-1 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.bb-1 {
+  border-bottom: 1px solid whitesmoke;
+}
