--- a/public/index.css
+++ b/public/index.css
@@ -37,7 +37,7 @@
   fill: #876060;
 }
 
-#state-details {
+.details-header {
   min-height: 22px;
 }
 
@@ -59,6 +59,7 @@ h1,h2,h3 {
 .switch-view-button-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 8px;
   margin-bottom: 8px;
 }
